# affix

./: LICENSE  README.md
common/include/: host_dev_shared.h
common/include/AOCLUtils/: opencl.h
common/src/AOCLUtils/: opencl.cpp
docs/: fpga.md  host.md
fpga/: CMakeLists.txt
fpga/include/: common.h
fpga/include/kernels/: color.h  pixel_wise.h  stencil.h  warp.h
fpga/include/templates/: geo_templates.h  mem_templates.h  pixelwise_templates.h  sink_templates.h  src_templates.h  stats_templates.h  stencil_templates.h  templates.h
fpga/sample/: autoc_template.cl  canny_template.cl  census_template.cl  filter_template.cl  sift_template.cl
host/: CMakeLists.txt
host/apps/: CMakeLists.txt  auto_contrast.cpp  canny.cpp  census.cpp  color_convert.cpp  filter.cpp  invert.cpp
host/cmake/: FindINTEL_ITT.cmake  FindIntelOpenVX.cmake  FindKhronosOpenVX.cmake  FindMO.cmake  FindOpenVX.cmake  FindSampleOpenCV.cmake  Utils.cmake  options.cmake
host/include/: app_info.h  app_manager.h  application.h  application_manager.h  cl_manager.h  cl_util.h  clio_manager.h  common.h  cut.h  image.h  opencl_io_manager.h  opencl_manager.h  opencl_util.h  params.h  perf.h  task.h
host/src/: app_manager.cpp  application_manager.cpp  cl_manager.cpp  clio_manager.cpp  main.cpp  opencl_io_manager.cpp  opencl_manager.cpp
host/test/: tests.cpp
raw_data/: cayuga.ppm  low_contrast.ppm  mandrill.pgm
utils/: gaussian_kernel_gen.cpp
